<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forum.ForumFragment"
    android:background="@color/bg_main_grey"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_forums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_forums"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_forums_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/main_font_color"/>


    <TextView
        android:id="@+id/tv_forums_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forums_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_forums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
       />

    <TextView
        android:id="@+id/tv_forums_avaliable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forums_avaliable"
        app:layout_constraintTop_toBottomOf="@+id/tv_forums_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:layout_marginTop="40dp"/>

    <Button
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="40dp"
    android:id="@+id/btn_forum1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tv_forums_avaliable"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/btn_forum1"
    android:backgroundTint="@color/bg_buttons"
    android:textSize="20dp"
        android:padding="10dp"/>

    <Button
    android:id="@+id/btn_forum2"
    android:layout_marginHorizontal="20dp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/btn_forum1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/btn_forum2"
   android:backgroundTint="@color/bg_buttons"
   android:textSize="20dp"
        android:padding="10dp"/>

    <Button
   android:id="@+id/btn_forum3"
   android:layout_width="0dp"
   android:layout_marginHorizontal="20dp"
   android:layout_height="wrap_content"
   app:layout_constraintTop_toBottomOf="@+id/btn_forum2"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintStart_toStartOf="parent"
   android:text="@string/btn_forum3"
   android:backgroundTint="@color/bg_buttons"
   android:textSize="20dp"
        android:padding="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>