<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".ui.support.SupportActivity"
    android:layout_marginVertical="10dp">

    <TextView
        android:id="@+id/tv_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_support"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_support_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_support_desc"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_support_title"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:hint="@string/et_support"
        android:gravity="top|start"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:maxLines="8"
        app:layout_constraintTop_toBottomOf="@id/tv_support_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_send_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        app:layout_constraintTop_toBottomOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
