<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/bg_main_grey"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_user"
            app:shapeAppearanceOverlay="@style/CircleImage" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:maxLength="10"
            android:text="@string/tv_user_tittle"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="64dp"
        app:layout_constraintTop_toBottomOf="@id/user_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_email_desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email@exexemplo.com"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_number_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_number_desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(11) 999999999"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_company_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_company_desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Empresa Fictícia"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_preferences_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_preferences_desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_skills_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_skills_desc"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#888888"
            android:textSize="14sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/bg_buttons"
        android:text="@string/bt_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_infos"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.6"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bt_delete"
        app:layout_constraintTop_toBottomOf="@id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/bg_buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>
