<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/support_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.support.SupportFragment"
    android:background="@color/bg_main_grey"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/tv_support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_support"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="24dp"
        android:textColor="@color/main_font_color"/>

    <TextView
        android:id="@+id/tv_support_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_support_desc"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_support_title"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="10dp"
        />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:hint="@string/et_support"
        android:gravity="top|start"
        android:background="@android:drawable/editbox_background"
        android:padding="12dp"
        android:inputType="textMultiLine"
        android:maxLines="8"
        app:layout_constraintTop_toBottomOf="@id/tv_support_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_send_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        app:layout_constraintTop_toBottomOf="@id/et_message"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/bg_buttons"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginEnd="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
