<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matchmaking.MatchmakingActivity">

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_user"
            android:layout_marginEnd="10dp"
            app:shapeAppearanceOverlay="@style/CircleImage" />


        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/tv_user_tittle"
            android:textSize="40sp"
            android:maxLength="10"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_about_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/user_layout"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/bt_interested"
        app:layout_constraintWidth_percent="0.6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_user" />

    <Button
        android:id="@+id/bt_ignore"
        app:layout_constraintWidth_percent="0.6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ignore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_interested" />

</androidx.constraintlayout.widget.ConstraintLayout>